# POD_with_Python_and_Comsol

./: .gitignore  README.adoc  README.md  requirements.txt  status_quo.org
comsol/: Data.txt  Data_simplest.txt  I_shape_Heat_Equation.mph  L_shape_Heat_Equation.mph  bare_1.vtu  bare_10.vtu  bare_11.vtu  bare_12.vtu  bare_13.vtu  bare_14.vtu  bare_15.vtu  bare_16.vtu  bare_17.vtu  bare_18.vtu  bare_19.vtu  bare_2.vtu  bare_20.vtu  bare_21.vtu  bare_22.vtu  bare_23.vtu  bare_24.vtu  bare_25.vtu  bare_26.vtu  bare_27.vtu  bare_28.vtu  bare_29.vtu  bare_3.vtu  bare_30.vtu  bare_31.vtu  bare_32.vtu  bare_33.vtu  bare_34.vtu  bare_35.vtu  bare_4.vtu  bare_5.vtu  bare_6.vtu  bare_7.vtu  bare_8.vtu  bare_9.vtu  simplest_Heat_Equation.mph  (+2 more)
data/: Data.txt  I_shape__data.txt  L_shape__data.txt  Magnetic_flux_density_norm__0_0.vtu  Magnetic_flux_density_norm__0_00005.vtu  Magnetic_flux_density_norm__0_0001.vtu  Magnetic_flux_density_norm__0_00015.vtu  Magnetic_flux_density_norm__0_0002.vtu  Magnetic_flux_density_norm__0_00025.vtu  Magnetic_flux_density_norm__0_0003.vtu  Magnetic_flux_density_norm__0_00035.vtu  Magnetic_flux_density_norm__0_0004.vtu  Magnetic_flux_density_norm__0_00045.vtu  Magnetic_flux_density_norm__0_0005.vtu  Magnetic_flux_density_norm__0_00055.vtu  Magnetic_flux_density_norm__0_0006.vtu  Magnetic_flux_density_norm__0_00065.vtu  Magnetic_flux_density_norm__0_0007.vtu  Magnetic_flux_density_norm__0_00075.vtu  Magnetic_flux_density_norm__0_0008.vtu  (+137 more)
freeFEM/: Th.msh  (+19 more)
src/Rust/MWE/: Cargo.toml
src/Rust/MWE/src/: FAIL_MWE__Lorenz_attractor.rs  FAIL_MWE__SVD.rs
(+212 files in other folders)
