[package]
name = "dummy"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
primal = "~0.2.3"
peroxide = { version = "0.38.0", features = ["plot"] }
ndarray = { version = "0.16.0", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-linalg = "0.16.0"
ndarray-rand = "0.15.0"
nalgebra = "0.33.2"
nalgebra-lapack = "0.25.0"
matrix_operations = "0.1.5"
vecstorage = "0.1.2"
csv = "1.1"
ndarray-csv = "0.5.3"
